[package]
name = "hatena-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
url = "2.2.2"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
chrono = "0.4.22"
rand = "0.8.5"
percent-encoding = "2.2.0"
hmac-sha1 = "0.1.3"
base64 = "0.13.0"
ring = "0.16.20"
thiserror = "1.0.30"
webbrowser = "0.8.0"
scraper = "0.13.0"
